wip change to internally generated error messages